--- a/FoodPiper/ViewPeepMenu.xib
+++ b/FoodPiper/ViewPeepMenu.xib
@@ -54,21 +54,70 @@
                         <action selector="viewFriendsPipes" destination="-1" eventType="touchUpInside" id="abC-0p-eNr"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Peep Menu" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z64-7W-DvM">
+                    <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="56" id="5O2-10-63e"/>
+                        <constraint firstAttribute="width" constant="152" id="76A-ge-8H0"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="5O2-10-63e"/>
+                            <exclude reference="76A-ge-8H0"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="5O2-10-63e"/>
+                            <include reference="76A-ge-8H0"/>
+                        </mask>
+                    </variation>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mqx-5D-dsi">
+                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="0Ra-mZ-Riy"/>
+                        <constraint firstAttribute="width" constant="39" id="xNY-zN-kLD"/>
+                    </constraints>
+                    <state key="normal" title="Close"/>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="0Ra-mZ-Riy"/>
+                            <exclude reference="xNY-zN-kLD"/>
+                        </mask>
+                    </variation>
+                    <variation key="heightClass=regular-widthClass=compact">
+                        <mask key="constraints">
+                            <include reference="0Ra-mZ-Riy"/>
+                            <include reference="xNY-zN-kLD"/>
+                        </mask>
+                    </variation>
+                    <connections>
+                        <action selector="closePeepMenuView:" destination="-1" eventType="touchUpInside" id="WTK-gp-wK5"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="02J-ZL-EC4"/>
                 <constraint firstItem="bds-Q4-cMQ" firstAttribute="width" secondItem="L15-ah-g2o" secondAttribute="width" id="1wq-MP-7zx"/>
                 <constraint firstItem="C2P-RE-wo9" firstAttribute="height" secondItem="bR1-3N-px9" secondAttribute="height" id="AAc-gh-HaU"/>
                 <constraint firstItem="L15-ah-g2o" firstAttribute="width" secondItem="C2P-RE-wo9" secondAttribute="width" id="F1d-o5-WEv"/>
+                <constraint firstItem="z64-7W-DvM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="40" id="JVQ-Qx-8ve"/>
                 <constraint firstItem="L15-ah-g2o" firstAttribute="leading" secondItem="C2P-RE-wo9" secondAttribute="trailing" constant="-9" id="KaJ-M5-WC9">
                     <variation key="heightClass=regular-widthClass=compact" constant="-4"/>
                 </constraint>
                 <constraint firstItem="bR1-3N-px9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="L8c-nG-KiK"/>
+                <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mhh-9N-iJE"/>
                 <constraint firstItem="bds-Q4-cMQ" firstAttribute="height" secondItem="L15-ah-g2o" secondAttribute="height" id="Nao-SG-ERR"/>
                 <constraint firstAttribute="bottom" secondItem="bR1-3N-px9" secondAttribute="bottom" constant="160" identifier="4" id="RMP-FL-KUM"/>
                 <constraint firstItem="bds-Q4-cMQ" firstAttribute="leading" secondItem="L15-ah-g2o" secondAttribute="trailing" constant="-25" id="Skz-l0-YD6">
                     <variation key="heightClass=regular-widthClass=compact" constant="-25"/>
                 </constraint>
+                <constraint firstItem="z64-7W-DvM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Vz9-u2-OBD"/>
                 <constraint firstAttribute="bottom" secondItem="bds-Q4-cMQ" secondAttribute="bottom" constant="14" identifier="1" id="cNf-GI-d64"/>
                 <constraint firstAttribute="bottom" secondItem="C2P-RE-wo9" secondAttribute="bottom" constant="141" identifier="3" id="cWN-aE-NIW"/>
                 <constraint firstItem="C2P-RE-wo9" firstAttribute="width" secondItem="bR1-3N-px9" secondAttribute="width" id="fa5-XH-oVx"/>
@@ -84,8 +133,16 @@
                     <exclude reference="L15-ah-g2o"/>
                     <exclude reference="bds-Q4-cMQ"/>
                     <exclude reference="bR1-3N-px9"/>
+                    <exclude reference="z64-7W-DvM"/>
+                    <exclude reference="Mqx-5D-dsi"/>
                 </mask>
                 <mask key="constraints">
+                    <exclude reference="JVQ-Qx-8ve"/>
+                    <exclude reference="Vz9-u2-OBD"/>
+                    <exclude reference="02J-ZL-EC4"/>
+                    <exclude reference="Mhh-9N-iJE"/>
+                    <exclude reference="L8c-nG-KiK"/>
+                    <exclude reference="RMP-FL-KUM"/>
                     <exclude reference="AAc-gh-HaU"/>
                     <exclude reference="cWN-aE-NIW"/>
                     <exclude reference="fa5-XH-oVx"/>
@@ -94,8 +151,6 @@
                     <exclude reference="KaJ-M5-WC9"/>
                     <exclude reference="hkn-dT-T3S"/>
                     <exclude reference="rMv-cF-dqz"/>
-                    <exclude reference="L8c-nG-KiK"/>
-                    <exclude reference="RMP-FL-KUM"/>
                     <exclude reference="1wq-MP-7zx"/>
                     <exclude reference="Nao-SG-ERR"/>
                     <exclude reference="Skz-l0-YD6"/>
@@ -108,8 +163,16 @@
                     <include reference="L15-ah-g2o"/>
                     <include reference="bds-Q4-cMQ"/>
                     <include reference="bR1-3N-px9"/>
+                    <include reference="z64-7W-DvM"/>
+                    <include reference="Mqx-5D-dsi"/>
                 </mask>
                 <mask key="constraints">
+                    <include reference="JVQ-Qx-8ve"/>
+                    <include reference="Vz9-u2-OBD"/>
+                    <include reference="02J-ZL-EC4"/>
+                    <include reference="Mhh-9N-iJE"/>
+                    <include reference="L8c-nG-KiK"/>
+                    <include reference="RMP-FL-KUM"/>
                     <include reference="AAc-gh-HaU"/>
                     <include reference="cWN-aE-NIW"/>
                     <include reference="fa5-XH-oVx"/>
@@ -118,8 +181,6 @@
                     <include reference="KaJ-M5-WC9"/>
                     <include reference="hkn-dT-T3S"/>
                     <include reference="rMv-cF-dqz"/>
-                    <include reference="L8c-nG-KiK"/>
-                    <include reference="RMP-FL-KUM"/>
                     <include reference="1wq-MP-7zx"/>
                     <include reference="Nao-SG-ERR"/>
                     <include reference="Skz-l0-YD6"/>
