--- a/FoodPiper/Base.lproj/Main.storyboard
+++ b/FoodPiper/Base.lproj/Main.storyboard
@@ -301,6 +301,9 @@
                                                 <include reference="nBv-R1-Ebg"/>
                                             </mask>
                                         </variation>
+                                        <connections>
+                                            <action selector="skipLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iDv-6O-4ed"/>
+                                        </connections>
                                     </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8A0-xH-f0B" customClass="Logo" customModule="FoodPiper" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
