Changing the restaurant tiles

--- a/FoodPiper/ViewRestaurants.storyboard
+++ b/FoodPiper/ViewRestaurants.storyboard
@@ -12,7 +12,7 @@
                         <viewControllerLayoutGuide type="top" id="H2Q-oU-1yb"/>
                         <viewControllerLayoutGuide type="bottom" id="BOL-og-cs8"/>
                     </layoutGuides>
-                    <view key="view" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="OzN-Tk-2AE">
+                    <view key="view" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="OzN-Tk-2AE" customClass="FoodBackgroundView" customModule="FoodPiper" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -21,7 +21,6 @@
                                 <subviews>
                                     <scrollView opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oFX-Ym-bdg">
                                         <rect key="frame" x="0.0" y="44" width="600" height="492"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </scrollView>
                                     <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="uV7-Rb-gZj">
                                         <rect key="frame" x="1" y="0.0" width="600" height="44"/>
@@ -34,7 +33,6 @@
                                         </connections>
                                     </searchBar>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="uV7-Rb-gZj" firstAttribute="top" secondItem="7G2-Gs-pv6" secondAttribute="top" id="7oB-1i-fRC"/>
                                     <constraint firstItem="oFX-Ym-bdg" firstAttribute="top" secondItem="uV7-Rb-gZj" secondAttribute="bottom" id="Lql-Pe-fgs"/>
@@ -46,7 +44,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="7G2-Gs-pv6" firstAttribute="leading" secondItem="OzN-Tk-2AE" secondAttribute="leading" id="4Yd-Oh-xk2"/>
                             <constraint firstItem="BOL-og-cs8" firstAttribute="top" secondItem="7G2-Gs-pv6" secondAttribute="bottom" id="CZ5-aE-FBi"/>
