--- a/FoodPiper/ViewRestaurantsView.xib
+++ b/FoodPiper/ViewRestaurantsView.xib
@@ -7,7 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DEViewRestaurantsViewController"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="1" customClass="DEViewRestaurantsView">
-            <rect key="frame" x="0.0" y="0.0" width="140" height="251"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="276"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie at the park" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rdq-Pp-4T2">
@@ -20,8 +20,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8.2 mi" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="45" translatesAutoresizingMaskIntoConstraints="NO" id="Ali-rf-U8v">
-                    <rect key="frame" x="31" y="221" width="45" height="24"/>
-                    <color key="backgroundColor" red="0.12549019610000001" green="0.53725490200000003" blue="0.63921568630000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="31" y="246" width="45" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="e2N-76-rGr"/>
                         <constraint firstAttribute="width" constant="45" id="kFD-ar-0Ch"/>
@@ -38,7 +37,7 @@
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B1c-VQ-fcl">
-                    <rect key="frame" x="7" y="225" width="23" height="15"/>
+                    <rect key="frame" x="7" y="250" width="23" height="15"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -47,7 +46,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L5I-6n-mVu">
-                    <rect key="frame" x="6" y="190" width="25" height="25"/>
+                    <rect key="frame" x="6" y="215" width="25" height="25"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
@@ -66,18 +65,17 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Movie at the park" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" preferredMaxLayoutWidth="129" translatesAutoresizingMaskIntoConstraints="NO" id="kW7-t4-DET">
-                    <rect key="frame" x="6" y="168" width="129" height="18"/>
-                    <color key="backgroundColor" red="0.15686274510000001" green="0.54901960780000003" blue="0.64313725489999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="6" y="193" width="129" height="18"/>
                     <constraints>
-                        <constraint firstAttribute="height" priority="500" constant="36" id="30D-4E-gNA"/>
+                        <constraint firstAttribute="height" priority="500" constant="18" id="30D-4E-gNA"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="13"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="104" translatesAutoresizingMaskIntoConstraints="NO" id="dfb-u1-i4Q">
-                    <rect key="frame" x="31" y="189" width="104" height="27"/>
-                    <color key="backgroundColor" red="0.96078431369999995" green="0.64313725489999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="31" y="214" width="104" height="27"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="27" id="7eb-Zm-fJq"/>
                     </constraints>
@@ -86,9 +84,9 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.12941176470588234" green="0.54117647058823526" blue="0.64313725490196072" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="kW7-t4-DET" firstAttribute="top" secondItem="MJ0-LB-RQz" secondAttribute="bottom" constant="6" id="73h-uI-frd"/>
+                <constraint firstItem="kW7-t4-DET" firstAttribute="top" secondItem="MJ0-LB-RQz" secondAttribute="bottom" constant="31" id="73h-uI-frd"/>
                 <constraint firstItem="B1c-VQ-fcl" firstAttribute="top" secondItem="dfb-u1-i4Q" secondAttribute="bottom" constant="9" id="98F-dg-hYR"/>
                 <constraint firstAttribute="trailing" secondItem="MJ0-LB-RQz" secondAttribute="trailing" id="9xA-Je-nJW"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="leading" secondItem="L5I-6n-mVu" secondAttribute="trailing" id="EDr-7c-L9s"/>
@@ -119,7 +117,7 @@
                 <outlet property="lblSubtitle" destination="kW7-t4-DET" id="XHW-lK-SBe"/>
                 <outlet property="lblTitle" destination="Rdq-Pp-4T2" id="lYf-Hm-poA"/>
             </connections>
-            <point key="canvasLocation" x="-158" y="85.5"/>
+            <point key="canvasLocation" x="-158" y="98"/>
         </view>
         <view contentMode="scaleToFill" id="jXJ-tE-48P">
             <rect key="frame" x="0.0" y="0.0" width="140" height="24"/>
