Added the directions button to the tiles

--- a/FoodPiper/ViewRestaurantsView.xib
+++ b/FoodPiper/ViewRestaurantsView.xib
@@ -83,25 +83,47 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OAY-py-BDZ">
+                    <rect key="frame" x="6" y="167" width="129" height="24"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="24" id="Mli-xh-5vo"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <state key="normal" title="Get Directions">
+                        <color key="titleColor" red="0.96078431369999995" green="0.64313725489999995" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                            <real key="value" value="0.0"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                            <real key="value" value="2"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.12941176470588234" green="0.54117647058823526" blue="0.64313725490196072" alpha="0.90000000000000002" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="kW7-t4-DET" firstAttribute="top" secondItem="MJ0-LB-RQz" secondAttribute="bottom" constant="31" id="73h-uI-frd"/>
                 <constraint firstItem="B1c-VQ-fcl" firstAttribute="top" secondItem="dfb-u1-i4Q" secondAttribute="bottom" constant="9" id="98F-dg-hYR"/>
                 <constraint firstAttribute="trailing" secondItem="MJ0-LB-RQz" secondAttribute="trailing" id="9xA-Je-nJW"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="leading" secondItem="L5I-6n-mVu" secondAttribute="trailing" id="EDr-7c-L9s"/>
                 <constraint firstItem="MJ0-LB-RQz" firstAttribute="top" secondItem="Rdq-Pp-4T2" secondAttribute="bottom" constant="-1" id="LaM-g6-Aah"/>
+                <constraint firstItem="OAY-py-BDZ" firstAttribute="top" secondItem="MJ0-LB-RQz" secondAttribute="bottom" constant="5" id="Mk8-6U-GCT"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="top" secondItem="kW7-t4-DET" secondAttribute="bottom" constant="3" id="Nao-Bq-HTA"/>
                 <constraint firstItem="dfb-u1-i4Q" firstAttribute="centerY" secondItem="L5I-6n-mVu" secondAttribute="centerY" id="PcX-5S-THw"/>
                 <constraint firstItem="L5I-6n-mVu" firstAttribute="leading" secondItem="kW7-t4-DET" secondAttribute="leading" id="Suo-uX-dkK"/>
                 <constraint firstItem="Ali-rf-U8v" firstAttribute="leading" secondItem="dfb-u1-i4Q" secondAttribute="leading" id="ctj-nj-nXq"/>
+                <constraint firstItem="kW7-t4-DET" firstAttribute="top" secondItem="OAY-py-BDZ" secondAttribute="bottom" constant="2" id="eWt-nG-iv2"/>
                 <constraint firstItem="ccH-so-CjV" firstAttribute="leading" secondItem="Rdq-Pp-4T2" secondAttribute="trailing" constant="1" id="g3j-bI-zce"/>
+                <constraint firstItem="OAY-py-BDZ" firstAttribute="trailing" secondItem="kW7-t4-DET" secondAttribute="trailing" id="gnb-19-ogM"/>
                 <constraint firstItem="B1c-VQ-fcl" firstAttribute="centerX" secondItem="L5I-6n-mVu" secondAttribute="centerX" id="iCD-nB-6HM"/>
                 <constraint firstItem="Ali-rf-U8v" firstAttribute="centerY" secondItem="B1c-VQ-fcl" secondAttribute="centerY" constant="0.5" id="kff-lq-T8Y"/>
                 <constraint firstAttribute="trailing" secondItem="ccH-so-CjV" secondAttribute="trailing" constant="1" id="l8q-B2-zA3"/>
                 <constraint firstAttribute="trailing" secondItem="kW7-t4-DET" secondAttribute="trailing" constant="5" id="ncV-Mu-j54"/>
                 <constraint firstItem="Rdq-Pp-4T2" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="6" id="olk-eP-Z9B"/>
                 <constraint firstItem="ccH-so-CjV" firstAttribute="centerY" secondItem="Rdq-Pp-4T2" secondAttribute="centerY" id="s7Y-BC-jPv"/>
+                <constraint firstItem="OAY-py-BDZ" firstAttribute="leading" secondItem="kW7-t4-DET" secondAttribute="leading" id="t10-jQ-obx"/>
                 <constraint firstItem="MJ0-LB-RQz" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="uBJ-qB-x4W"/>
                 <constraint firstItem="kW7-t4-DET" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="6" id="wXu-9B-610"/>
                 <constraint firstItem="Rdq-Pp-4T2" firstAttribute="top" secondItem="1" secondAttribute="top" id="ybC-aQ-MmD"/>
