--- a/FoodPiper/ViewPeepMenu.xib
+++ b/FoodPiper/ViewPeepMenu.xib
@@ -10,34 +10,34 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2P-RE-wo9">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C2P-RE-wo9" customClass="ViewAllPeepsIcon" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                    <state key="normal" title="All"/>
                     <connections>
                         <action selector="viewAllPipes:" destination="-1" eventType="touchUpInside" id="77S-je-M6t"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L15-ah-g2o">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L15-ah-g2o" customClass="ViewFavoriteIcon" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                    <state key="normal" title="Fav"/>
                     <connections>
                         <action selector="viewFavoritePipes" destination="-1" eventType="touchUpInside" id="JMh-wT-Uqq"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bds-Q4-cMQ">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bds-Q4-cMQ" customClass="DealsIcon" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                    <state key="normal" title="Deals"/>
                     <connections>
                         <action selector="viewDeals" destination="-1" eventType="touchUpInside" id="U1E-4s-Ogy"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bR1-3N-px9">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bR1-3N-px9" customClass="FriendsIcon" customModule="FoodPiper" customModuleProvider="target">
                     <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="51" id="8Nc-0e-Ff9"/>
-                        <constraint firstAttribute="height" constant="51" id="rwJ-c7-xpx"/>
+                        <constraint firstAttribute="width" constant="51" id="8Nc-0e-Ff9">
+                            <variation key="heightClass=regular-widthClass=compact" constant="70"/>
+                        </constraint>
+                        <constraint firstAttribute="height" constant="51" id="rwJ-c7-xpx">
+                            <variation key="heightClass=regular-widthClass=compact" constant="70"/>
+                        </constraint>
                     </constraints>
-                    <state key="normal" title="Friends"/>
                     <variation key="default">
                         <mask key="constraints">
                             <exclude reference="8Nc-0e-Ff9"/>
@@ -103,28 +103,48 @@
             <color key="backgroundColor" white="0.0" alpha="0.90000000000000002" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="02J-ZL-EC4"/>
-                <constraint firstItem="bds-Q4-cMQ" firstAttribute="width" secondItem="L15-ah-g2o" secondAttribute="width" id="1wq-MP-7zx"/>
-                <constraint firstItem="C2P-RE-wo9" firstAttribute="height" secondItem="bR1-3N-px9" secondAttribute="height" id="AAc-gh-HaU"/>
-                <constraint firstItem="L15-ah-g2o" firstAttribute="width" secondItem="C2P-RE-wo9" secondAttribute="width" id="F1d-o5-WEv"/>
+                <constraint firstItem="bds-Q4-cMQ" firstAttribute="width" secondItem="L15-ah-g2o" secondAttribute="width" id="1wq-MP-7zx">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
+                <constraint firstItem="C2P-RE-wo9" firstAttribute="height" secondItem="bR1-3N-px9" secondAttribute="height" id="AAc-gh-HaU">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
+                <constraint firstItem="L15-ah-g2o" firstAttribute="width" secondItem="C2P-RE-wo9" secondAttribute="width" id="F1d-o5-WEv">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
                 <constraint firstItem="z64-7W-DvM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="40" id="JVQ-Qx-8ve"/>
                 <constraint firstItem="L15-ah-g2o" firstAttribute="leading" secondItem="C2P-RE-wo9" secondAttribute="trailing" constant="-9" id="KaJ-M5-WC9">
-                    <variation key="heightClass=regular-widthClass=compact" constant="-4"/>
+                    <variation key="heightClass=regular-widthClass=compact" constant="-7"/>
                 </constraint>
                 <constraint firstItem="bR1-3N-px9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="L8c-nG-KiK"/>
                 <constraint firstItem="Mqx-5D-dsi" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mhh-9N-iJE"/>
-                <constraint firstItem="bds-Q4-cMQ" firstAttribute="height" secondItem="L15-ah-g2o" secondAttribute="height" id="Nao-SG-ERR"/>
-                <constraint firstAttribute="bottom" secondItem="bR1-3N-px9" secondAttribute="bottom" constant="160" identifier="4" id="RMP-FL-KUM"/>
+                <constraint firstItem="bds-Q4-cMQ" firstAttribute="height" secondItem="L15-ah-g2o" secondAttribute="height" id="Nao-SG-ERR">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
+                <constraint firstAttribute="bottom" secondItem="bR1-3N-px9" secondAttribute="bottom" constant="160" identifier="4" id="RMP-FL-KUM">
+                    <variation key="heightClass=regular-widthClass=compact" constant="178"/>
+                </constraint>
                 <constraint firstItem="bds-Q4-cMQ" firstAttribute="leading" secondItem="L15-ah-g2o" secondAttribute="trailing" constant="-25" id="Skz-l0-YD6">
-                    <variation key="heightClass=regular-widthClass=compact" constant="-25"/>
+                    <variation key="heightClass=regular-widthClass=compact" constant="-39"/>
                 </constraint>
                 <constraint firstItem="z64-7W-DvM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Vz9-u2-OBD"/>
-                <constraint firstAttribute="bottom" secondItem="bds-Q4-cMQ" secondAttribute="bottom" constant="14" identifier="1" id="cNf-GI-d64"/>
-                <constraint firstAttribute="bottom" secondItem="C2P-RE-wo9" secondAttribute="bottom" constant="141" identifier="3" id="cWN-aE-NIW"/>
-                <constraint firstItem="C2P-RE-wo9" firstAttribute="width" secondItem="bR1-3N-px9" secondAttribute="width" id="fa5-XH-oVx"/>
-                <constraint firstAttribute="bottom" secondItem="L15-ah-g2o" secondAttribute="bottom" constant="77" identifier="2" id="hkn-dT-T3S"/>
-                <constraint firstItem="L15-ah-g2o" firstAttribute="height" secondItem="C2P-RE-wo9" secondAttribute="height" id="rMv-cF-dqz"/>
+                <constraint firstAttribute="bottom" secondItem="bds-Q4-cMQ" secondAttribute="bottom" constant="14" identifier="1" id="cNf-GI-d64">
+                    <variation key="heightClass=regular-widthClass=compact" constant="10"/>
+                </constraint>
+                <constraint firstAttribute="bottom" secondItem="C2P-RE-wo9" secondAttribute="bottom" constant="141" identifier="3" id="cWN-aE-NIW">
+                    <variation key="heightClass=regular-widthClass=compact" constant="166"/>
+                </constraint>
+                <constraint firstItem="C2P-RE-wo9" firstAttribute="width" secondItem="bR1-3N-px9" secondAttribute="width" id="fa5-XH-oVx">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
+                <constraint firstAttribute="bottom" secondItem="L15-ah-g2o" secondAttribute="bottom" constant="77" identifier="2" id="hkn-dT-T3S">
+                    <variation key="heightClass=regular-widthClass=compact" constant="88"/>
+                </constraint>
+                <constraint firstItem="L15-ah-g2o" firstAttribute="height" secondItem="C2P-RE-wo9" secondAttribute="height" id="rMv-cF-dqz">
+                    <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
+                </constraint>
                 <constraint firstItem="C2P-RE-wo9" firstAttribute="leading" secondItem="bR1-3N-px9" secondAttribute="trailing" constant="18" id="rf1-w6-8MW">
-                    <variation key="heightClass=regular-widthClass=compact" constant="23"/>
+                    <variation key="heightClass=regular-widthClass=compact" constant="13"/>
                 </constraint>
             </constraints>
             <variation key="default">
@@ -137,12 +157,6 @@
                     <exclude reference="Mqx-5D-dsi"/>
                 </mask>
                 <mask key="constraints">
-                    <exclude reference="JVQ-Qx-8ve"/>
-                    <exclude reference="Vz9-u2-OBD"/>
-                    <exclude reference="02J-ZL-EC4"/>
-                    <exclude reference="Mhh-9N-iJE"/>
-                    <exclude reference="L8c-nG-KiK"/>
-                    <exclude reference="RMP-FL-KUM"/>
                     <exclude reference="AAc-gh-HaU"/>
                     <exclude reference="cWN-aE-NIW"/>
                     <exclude reference="fa5-XH-oVx"/>
@@ -151,10 +165,16 @@
                     <exclude reference="KaJ-M5-WC9"/>
                     <exclude reference="hkn-dT-T3S"/>
                     <exclude reference="rMv-cF-dqz"/>
+                    <exclude reference="02J-ZL-EC4"/>
+                    <exclude reference="Mhh-9N-iJE"/>
+                    <exclude reference="L8c-nG-KiK"/>
+                    <exclude reference="RMP-FL-KUM"/>
                     <exclude reference="1wq-MP-7zx"/>
                     <exclude reference="Nao-SG-ERR"/>
                     <exclude reference="Skz-l0-YD6"/>
                     <exclude reference="cNf-GI-d64"/>
+                    <exclude reference="JVQ-Qx-8ve"/>
+                    <exclude reference="Vz9-u2-OBD"/>
                 </mask>
             </variation>
             <variation key="heightClass=regular-widthClass=compact">
@@ -167,12 +187,6 @@
                     <include reference="Mqx-5D-dsi"/>
                 </mask>
                 <mask key="constraints">
-                    <include reference="JVQ-Qx-8ve"/>
-                    <include reference="Vz9-u2-OBD"/>
-                    <include reference="02J-ZL-EC4"/>
-                    <include reference="Mhh-9N-iJE"/>
-                    <include reference="L8c-nG-KiK"/>
-                    <include reference="RMP-FL-KUM"/>
                     <include reference="AAc-gh-HaU"/>
                     <include reference="cWN-aE-NIW"/>
                     <include reference="fa5-XH-oVx"/>
@@ -181,10 +195,16 @@
                     <include reference="KaJ-M5-WC9"/>
                     <include reference="hkn-dT-T3S"/>
                     <include reference="rMv-cF-dqz"/>
+                    <include reference="02J-ZL-EC4"/>
+                    <include reference="Mhh-9N-iJE"/>
+                    <include reference="L8c-nG-KiK"/>
+                    <include reference="RMP-FL-KUM"/>
                     <include reference="1wq-MP-7zx"/>
                     <include reference="Nao-SG-ERR"/>
                     <include reference="Skz-l0-YD6"/>
                     <include reference="cNf-GI-d64"/>
+                    <include reference="JVQ-Qx-8ve"/>
+                    <include reference="Vz9-u2-OBD"/>
                 </mask>
             </variation>
             <connections>
